@@ -823,6 +823,7 @@ about.text=jEdit is brought to you by\n\
 	Peter Graves\n\
 	Phillip Mateescu\n\
 	Ralf Engels\n\
+	Rex Young\n\
 	Richard Ashwell\n\
 	Richard Beton\n\
 	Rick Gibbs\n\
